adds REST test for controller